[gd_scene load_steps=2 format=3 uid="uid://bfhgfvb3satgb"]

[ext_resource type="Script" path="res://game.gd" id="1_bqu81"]

[node name="Game" type="Node2D"]
script = ExtResource("1_bqu81")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 324)

[node name="Pause" type="Button" parent="."]
offset_left = 30.0
offset_top = 35.0
offset_right = 140.0
offset_bottom = 83.0
scale = Vector2(1.09514, -0.753847)
theme_override_font_sizes/font_size = 16
text = "STOP"
metadata/_edit_use_anchors_ = true

[node name="Start" type="Button" parent="."]
offset_left = 30.0
offset_top = 35.0308
offset_right = 150.0
offset_bottom = 70.0308
theme_override_font_sizes/font_size = 19
text = "START"
metadata/_edit_use_anchors_ = true

[node name="Clear" type="Button" parent="."]
offset_left = 29.0
offset_top = 73.0
offset_right = 86.0
offset_bottom = 104.0
text = "CLEAR"
metadata/_edit_use_anchors_ = true

[connection signal="button_down" from="Pause" to="." method="_on_pause_button_down"]
[connection signal="focus_entered" from="Pause" to="." method="_on_pause_focus_entered"]
[connection signal="mouse_entered" from="Pause" to="." method="_on_pause_mouse_entered"]
[connection signal="mouse_exited" from="Pause" to="." method="_on_pause_mouse_exited"]
[connection signal="button_up" from="Start" to="." method="_on_start_button_up"]
[connection signal="mouse_entered" from="Start" to="." method="_on_start_mouse_entered"]
[connection signal="mouse_exited" from="Start" to="." method="_on_start_mouse_exited"]
[connection signal="button_up" from="Clear" to="." method="_on_clear_button_up"]
